Fix leak in CronetBidirectionalStreamAdapter::OnDataSent

This CL wraps the newly created jobjectArray with ScopedJavaLocalRef so that
the object is deleted when call returns.

BUG=610353

Review-Url: https://codereview.chromium.org/1960243002
Cr-Commit-Position: refs/heads/master@{#392463}

Former-commit-id: c524bde480633344575ff0a2b0b8a7489ee07156